# src/routes/user.routes.js
@@ -1,6 +1,6 @@
 const express = require('express');
 
-const { handleRegister, handleLogin, handleGetDetail, handleLogout ,handleCustomerUpgrade} = require('../controller/user.controller');
+const { handleRegister, handleLogin, handleGetDetail, handleLogout ,handleCustomerUpgrade, handleCustomerManageSubscription} = require('../controller/user.controller');
 const { checkAuth } = require('../middleware/auth.middleware');
 const { validateRegistration } = require('../validater/userRegister.validate');
 const { validateLogin } = require('../validater/userLogin.validate');
@@ -17,7 +17,8 @@ userRouter.route('/logout').post(checkAuth,handleLogout);
 
 userRouter.route('/userDetailAndSubscriptionHistory').get(checkAuth, handleGetDetail)
 
-userRouter.route('/customers').post(checkAuth,handleCustomerUpgrade)
+userRouter.route('/updateSubcription').post(checkAuth,handleCustomerUpgrade)
+userRouter.route('/manageSubscription').post(checkAuth,handleCustomerManageSubscription)
 
 
 module.exports = userRouter;
